--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    
+    <button id="sequential">Sequential Fetch</button>
+    <button id="parallel">Parallel Fetch</button>
+    <div id="output"></div>
 </body>
 </html>
